# OpenBuudaiQT6

./: README.md
.github/scripts/: autofix.py
.github/workflows/: build-linux.yml  issue-triage.yml
Source/: CMakeLists.txt  OpenHantek.pro
Source/src/: configdialog.h  configpages.cpp  configpages.h  dockwindows.h  dsowidget.cpp  dsowidget.h  exporter.cpp  glgenerator.cpp  glgenerator.h  glscope.cpp  glscope.h  levelslider.cpp  main.cpp  openhantek.h  settings.cpp
Source/src/buudai/: buudai_control.cpp  buudai_device.cpp  buudai_device.h  buudai_types.h
